Fix colors to tone down the contrast slightly

--- a/styles/main.css
+++ b/styles/main.css
@@ -1,6 +1,6 @@
 body {
   background: white url(../images/spacecow_08.jpg) no-repeat fixed -125px -100px;
-  color: #000;
+  color: #333;
   font: 100% Verdana, Geneva, sans-serif; 
   margin: 0;
   padding: 0;
@@ -24,11 +24,11 @@ h1 {
 }
 
 h1 span:first-child {
-  color: #c8102e;
+  color: #d00022;
 }
 
 h1 a {
-  color: #000; 
+  color: inherit; 
   text-decoration: none;
 }
 
@@ -37,7 +37,7 @@ h2 {
 }
 
 h2 > span {
-  color: #c8102e;
+  color: #d00022;
   font-size: 150%;
   margin: auto 0.5em;
 }
@@ -60,11 +60,11 @@ li + li {
 }
 
 a {
-  color: #c8102e;
+  color: #d00022;
 }
 
 a:hover, a:active {
-  color: #333;
+  color: inherit;
 }
 
 @media only screen and (max-width: 640px) {
